feat(multiTenancy): implement tenant auth logic with identity
related to OPT-7124